tests/fixtures/invalid/type_errors/undefined_func.py
# Call undefined function
result: int = undefined_function(42)
print(result)
